--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ input {
 
 #map,
 #weathermap {
-  height: 444px;
+  height: 70vh;
 }
 @media screen and (max-width: 1440px) {
   .container__header {
@@ -27,7 +27,6 @@ input {
     height: 250px;
     width: 100%;
     display: flex;
-    justify-content: center;
     flex-direction: column;
     align-items: center;
   }
@@ -55,7 +54,7 @@ input {
     height: 50px;
     border-radius: 10px 0 0 10px;
     border: none;
-    padding: 0 10px;
+    padding: 0 20px;
     width: 100%;
   }
   .header__btnSearch {
@@ -75,6 +74,9 @@ input {
     border: none;
     background: #000;
     cursor: pointer;
+  }
+  .header__btnSearch input::placeholder {
+    color: var(--DarkGray);
   }
   input:focus {
     outline: none;
@@ -97,12 +99,12 @@ input {
   }
   .info__ubication div {
     width: calc(100% / 4);
-    border-left: 1px solid #c9c9c9;
-    padding: 10px 50px;
+    border-left: 1px solid var(--DarkGray);
+    padding: 0px 15px;
     box-sizing: border-box;
   }
   .info__ubication div p {
-    color: #7c7c7c;
+    color: var(--DarkGray);
     text-transform: uppercase;
     font-size: 0.8rem;
     margin-bottom: 10px;
@@ -110,8 +112,60 @@ input {
   }
   .info__ubication div h4 {
     font-size: 1.3rem;
+    color: var(--VeryDarkGray);
+  }
+}
+@media screen and (max-width: 998px) {
+  .info__ubication {
+    top: 25%;
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  form {
+    width: 85%;
+  }
+  .info__ubication {
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    top: 20%;
+    width: 85%;
+  }
+
+  .info__ubication div {
+    width: 100%;
+    border: none;
+  }
+
+  #weathermap {
+    height: 70vh;
   }
 }
 
 @media screen and (max-width: 375px) {
+  form {
+    width: 85%;
+  }
+  .info__ubication {
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    top: 20%;
+    width: 85%;
+  }
+
+  .info__ubication div {
+    width: 100%;
+    border: none;
+  }
+
+  #weathermap {
+    height: 70vh;
+  }
 }
