--- a/css/style.css
+++ b/css/style.css
@@ -21,101 +21,101 @@ input {
 #weathermap {
   height: 70vh;
 }
-@media screen and (max-width: 1440px) {
-  .container__header {
-    background-image: url(../images/pattern-bg.png);
-    height: 250px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 2%;
-  }
-  .header__text {
-    color: #fff;
-    font-weight: 400;
-    justify-content: center;
-    align-items: center;
-    height: 90px;
-    display: flex;
-    width: 100%;
-    margin-bottom: 20px;
-  }
-  form {
-    width: 50%;
-  }
-  .header__inputSearch {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    height: 60px;
-  }
-  .header__inputSearch > input {
-    width: 40%;
-    position: relative;
-    height: 50px;
-    border-radius: 10px 0 0 10px;
-    border: none;
-    padding: 0 20px;
-    width: 100%;
-  }
-  .header__btnSearch {
-    display: flex;
-    box-sizing: border-box;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    height: 50px;
-    border-radius: 0 10px 10px 0;
-  }
-  .header__btnSearch input {
-    width: 100%;
-    padding: 0 25px;
-    height: 100%;
-    border-radius: 0 10px 10px 0;
-    border: none;
-    background: #000;
-    cursor: pointer;
-  }
-  .header__btnSearch input::placeholder {
-    color: var(--DarkGray);
-  }
-  input:focus {
-    outline: none;
-  }
-  .header__btnSearch i {
-    position: absolute;
-    color: #fff;
-  }
-  .info__ubication {
-    width: 70%;
-    background: #fff;
-    z-index: 9999;
-    border-radius: 10px;
-    padding: 20px 20px;
-    box-sizing: border-box;
-    display: flex;
-    margin-top: 5%;
-  }
-  .info__ubication div {
-    width: calc(100% / 4);
-    border-left: 1px solid var(--DarkGray);
-    padding: 0px 15px;
-    box-sizing: border-box;
-    height: 100px;
-  }
-  .info__ubication div p {
-    color: var(--DarkGray);
-    text-transform: uppercase;
-    font-size: 0.8rem;
-    margin-bottom: 10px;
-    font-weight: 600;
-  }
-  .info__ubication div h4 {
-    font-size: 1.3rem;
-    color: var(--VeryDarkGray);
-  }
+/* @media screen and (max-width: 1440px) { */
+.container__header {
+  background-image: url(../images/pattern-bg.png);
+  height: 250px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 2%;
 }
+.header__text {
+  color: #fff;
+  font-weight: 400;
+  justify-content: center;
+  align-items: center;
+  height: 90px;
+  display: flex;
+  width: 100%;
+  margin-bottom: 20px;
+}
+form {
+  width: 50%;
+}
+.header__inputSearch {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 60px;
+}
+.header__inputSearch > input {
+  width: 40%;
+  position: relative;
+  height: 50px;
+  border-radius: 10px 0 0 10px;
+  border: none;
+  padding: 0 20px;
+  width: 100%;
+}
+.header__btnSearch {
+  display: flex;
+  box-sizing: border-box;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  height: 50px;
+  border-radius: 0 10px 10px 0;
+}
+.header__btnSearch input {
+  width: 100%;
+  padding: 0 25px;
+  height: 100%;
+  border-radius: 0 10px 10px 0;
+  border: none;
+  background: #000;
+  cursor: pointer;
+}
+.header__btnSearch input::placeholder {
+  color: var(--DarkGray);
+}
+input:focus {
+  outline: none;
+}
+.header__btnSearch i {
+  position: absolute;
+  color: #fff;
+}
+.info__ubication {
+  width: 70%;
+  background: #fff;
+  z-index: 9999;
+  border-radius: 10px;
+  padding: 20px 20px;
+  box-sizing: border-box;
+  display: flex;
+  margin-top: 5%;
+}
+.info__ubication div {
+  width: calc(100% / 4);
+  border-left: 1px solid var(--DarkGray);
+  padding: 0px 15px;
+  box-sizing: border-box;
+  height: 100px;
+}
+.info__ubication div p {
+  color: var(--DarkGray);
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  margin-bottom: 10px;
+  font-weight: 600;
+}
+.info__ubication div h4 {
+  font-size: 1.3rem;
+  color: var(--VeryDarkGray);
+}
+/* } */
 @media screen and (max-width: 998px) {
   .info__ubication {
     top: 25%;
